# python_fastapi

./: Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
app/: main.py  models.py
